queda el outliers

--- a/module-1/lab-data_cleaning/your-code/main.ipynb
+++ b/module-1/lab-data_cleaning/your-code/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,9 +42,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected to DB!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "mysql_domain = \"relational.fit.cvut.cz\"\n",
     "mysql_user = \"guest\"\n",
@@ -68,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +267,7 @@
        "4          5      54503  35.0                                None  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +532,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +911,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +950,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +984,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -995,21 +1004,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count     90584.000000\n",
-       "mean        259.253400\n",
-       "std        1632.261405\n",
-       "min           0.000000\n",
-       "25%           0.000000\n",
-       "50%           0.000000\n",
-       "75%         111.000000\n",
-       "max      175495.000000\n",
-       "IQR         111.000000\n",
+       "count    90584.000000\n",
+       "mean       259.253400\n",
+       "std       1632.261405\n",
+       "min          0.000000\n",
+       "25%          0.000000\n",
        "Name: ViewCount, dtype: float64"
       ]
      },
@@ -1018,11 +1023,11 @@
     }
    ],
    "source": [
-    "stats = data_clean1.describe().transpose()\n",
-    "\n",
+    "#no me hace el transpose ni el display como toca\n",
+    "stats = (data_clean1.describe()).transpose()\n",
     "stats['IQR'] = stats['75%'] - stats['25%']\n",
     "\n",
-    "display(stats)\n"
+    "display(stats.head())\n"
    ]
   },
   {
@@ -1043,7 +1048,8 @@
     "    results['Outlier'] = col\n",
     "    outliers = outliers.append(results)\n",
     "\n",
-    "    "
+    "#no me hace el transpose\n",
+    "\n"
    ]
   },
   {
