--- a/module-1/pandas-project/your-code/Shark-project.ipynb
+++ b/module-1/pandas-project/your-code/Shark-project.ipynb
@@ -334,17 +334,285 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Case Number</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Activity</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Fatal (Y/N)</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Species</th>\n",
+       "      <th>Investigator or Source</th>\n",
+       "      <th>pdf</th>\n",
+       "      <th>href formula</th>\n",
+       "      <th>href</th>\n",
+       "      <th>Case Number.1</th>\n",
+       "      <th>Case Number.2</th>\n",
+       "      <th>original order</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016.09.18.c</td>\n",
+       "      <td>18-Sep-16</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>Unprovoked</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>New Smyrna Beach, Volusia County</td>\n",
+       "      <td>Surfing</td>\n",
+       "      <td>male</td>\n",
+       "      <td>M</td>\n",
+       "      <td>...</td>\n",
+       "      <td>N</td>\n",
+       "      <td>13h00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Orlando Sentinel, 9/19/2016</td>\n",
+       "      <td>2016.09.18.c-NSB.pdf</td>\n",
+       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
+       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
+       "      <td>2016.09.18.c</td>\n",
+       "      <td>2016.09.18.c</td>\n",
+       "      <td>5993</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016.09.18.b</td>\n",
+       "      <td>18-Sep-16</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>Unprovoked</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>New Smyrna Beach, Volusia County</td>\n",
+       "      <td>Surfing</td>\n",
+       "      <td>Chucky Luciano</td>\n",
+       "      <td>M</td>\n",
+       "      <td>...</td>\n",
+       "      <td>N</td>\n",
+       "      <td>11h00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Orlando Sentinel, 9/19/2016</td>\n",
+       "      <td>2016.09.18.b-Luciano.pdf</td>\n",
+       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
+       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
+       "      <td>2016.09.18.b</td>\n",
+       "      <td>2016.09.18.b</td>\n",
+       "      <td>5992</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016.09.18.a</td>\n",
+       "      <td>18-Sep-16</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>Unprovoked</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>New Smyrna Beach, Volusia County</td>\n",
+       "      <td>Surfing</td>\n",
+       "      <td>male</td>\n",
+       "      <td>M</td>\n",
+       "      <td>...</td>\n",
+       "      <td>N</td>\n",
+       "      <td>10h43</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Orlando Sentinel, 9/19/2016</td>\n",
+       "      <td>2016.09.18.a-NSB.pdf</td>\n",
+       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
+       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
+       "      <td>2016.09.18.a</td>\n",
+       "      <td>2016.09.18.a</td>\n",
+       "      <td>5991</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016.09.17</td>\n",
+       "      <td>17-Sep-16</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>Unprovoked</td>\n",
+       "      <td>AUSTRALIA</td>\n",
+       "      <td>Victoria</td>\n",
+       "      <td>Thirteenth Beach</td>\n",
+       "      <td>Surfing</td>\n",
+       "      <td>Rory Angiolella</td>\n",
+       "      <td>M</td>\n",
+       "      <td>...</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>The Age, 9/18/2016</td>\n",
+       "      <td>2016.09.17-Angiolella.pdf</td>\n",
+       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
+       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
+       "      <td>2016.09.17</td>\n",
+       "      <td>2016.09.17</td>\n",
+       "      <td>5990</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016.09.15</td>\n",
+       "      <td>16-Sep-16</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>Unprovoked</td>\n",
+       "      <td>AUSTRALIA</td>\n",
+       "      <td>Victoria</td>\n",
+       "      <td>Bells Beach</td>\n",
+       "      <td>Surfing</td>\n",
+       "      <td>male</td>\n",
+       "      <td>M</td>\n",
+       "      <td>...</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2 m shark</td>\n",
+       "      <td>The Age, 9/16/2016</td>\n",
+       "      <td>2016.09.16-BellsBeach.pdf</td>\n",
+       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
+       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
+       "      <td>2016.09.16</td>\n",
+       "      <td>2016.09.15</td>\n",
+       "      <td>5989</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Case Number       Date  Year        Type    Country      Area  \\\n",
+       "0  2016.09.18.c  18-Sep-16  2016  Unprovoked        USA   Florida   \n",
+       "1  2016.09.18.b  18-Sep-16  2016  Unprovoked        USA   Florida   \n",
+       "2  2016.09.18.a  18-Sep-16  2016  Unprovoked        USA   Florida   \n",
+       "3    2016.09.17  17-Sep-16  2016  Unprovoked  AUSTRALIA  Victoria   \n",
+       "4    2016.09.15  16-Sep-16  2016  Unprovoked  AUSTRALIA  Victoria   \n",
+       "\n",
+       "                           Location Activity             Name Sex   ...  \\\n",
+       "0  New Smyrna Beach, Volusia County  Surfing             male    M  ...   \n",
+       "1  New Smyrna Beach, Volusia County  Surfing   Chucky Luciano    M  ...   \n",
+       "2  New Smyrna Beach, Volusia County  Surfing             male    M  ...   \n",
+       "3                  Thirteenth Beach  Surfing  Rory Angiolella    M  ...   \n",
+       "4                       Bells Beach  Surfing             male    M  ...   \n",
+       "\n",
+       "  Fatal (Y/N)   Time   Species        Investigator or Source  \\\n",
+       "0           N  13h00        NaN  Orlando Sentinel, 9/19/2016   \n",
+       "1           N  11h00        NaN  Orlando Sentinel, 9/19/2016   \n",
+       "2           N  10h43        NaN  Orlando Sentinel, 9/19/2016   \n",
+       "3           N    NaN        NaN           The Age, 9/18/2016   \n",
+       "4           N    NaN  2 m shark           The Age, 9/16/2016   \n",
+       "\n",
+       "                         pdf  \\\n",
+       "0       2016.09.18.c-NSB.pdf   \n",
+       "1   2016.09.18.b-Luciano.pdf   \n",
+       "2       2016.09.18.a-NSB.pdf   \n",
+       "3  2016.09.17-Angiolella.pdf   \n",
+       "4  2016.09.16-BellsBeach.pdf   \n",
+       "\n",
+       "                                        href formula  \\\n",
+       "0  http://sharkattackfile.net/spreadsheets/pdf_di...   \n",
+       "1  http://sharkattackfile.net/spreadsheets/pdf_di...   \n",
+       "2  http://sharkattackfile.net/spreadsheets/pdf_di...   \n",
+       "3  http://sharkattackfile.net/spreadsheets/pdf_di...   \n",
+       "4  http://sharkattackfile.net/spreadsheets/pdf_di...   \n",
+       "\n",
+       "                                                href Case Number.1  \\\n",
+       "0  http://sharkattackfile.net/spreadsheets/pdf_di...  2016.09.18.c   \n",
+       "1  http://sharkattackfile.net/spreadsheets/pdf_di...  2016.09.18.b   \n",
+       "2  http://sharkattackfile.net/spreadsheets/pdf_di...  2016.09.18.a   \n",
+       "3  http://sharkattackfile.net/spreadsheets/pdf_di...    2016.09.17   \n",
+       "4  http://sharkattackfile.net/spreadsheets/pdf_di...    2016.09.16   \n",
+       "\n",
+       "  Case Number.2 original order  \n",
+       "0  2016.09.18.c           5993  \n",
+       "1  2016.09.18.b           5992  \n",
+       "2  2016.09.18.a           5991  \n",
+       "3    2016.09.17           5990  \n",
+       "4    2016.09.15           5989  \n",
+       "\n",
+       "[5 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unnammed_cols = raw_df.drop(columns=[\"Unnamed: 22\",\"Unnamed: 23\"])\n",
+    "raw_df2 = unnammed_cols\n",
+    "raw_df2.head()\n",
+    "# We have deleted those columns"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['N', 'Y', nan, 'UNKNOWN', ' N', 'F', 'N ', '#VALUE!', 'n'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#raw_df2[\"Time\"]\n",
+    "#Variable Time is not homogenized \n",
+    "\n",
+    "raw_df2.dtypes\n",
+    "#Let's tranform Age, Date (?), o concatenar date con Year -- También TIME \n",
+    "###OJO CON INJURY\n",
+    "\n",
+    "raw_df2.replace({'Fatal (Y/N)': {'Y': True, 'N': False}})\n",
+    "raw_df2[\"Fatal (Y/N)\"].unique()\n",
+    "\n",
+    "\n",
+    "replacements = {\n",
+    "   \"Fatal (Y/N)\": {\n",
+    "      r'(D.*DO|DOLLARD.*)': 'N',\n",
+    "      r'I[lL]*[eE]*.*': 'ILLE Perot'}\n",
+    "}\n",
+    "\n",
+    "\n",
+    "df.replace(replacements, regex=True, inplace=True)\n",
+    "\n",
+    "#raw_df2.dtypes\n",
+    "#df.at['C', 'x'] = 10\n"
+   ]
   },
   {
    "cell_type": "code",
