--- a/module-1/pandas-project/your-code/Shark-project.ipynb
+++ b/module-1/pandas-project/your-code/Shark-project.ipynb
@@ -574,17 +574,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['N', 'Y', nan, 'UNKNOWN', ' N', 'F', 'N ', '#VALUE!', 'n'],\n",
-       "      dtype=object)"
+       "N          4315\n",
+       "Y          1552\n",
+       "UNKNOWN      94\n",
+       " N            8\n",
+       "#VALUE!       1\n",
+       "Name: Fatal (Y/N), dtype: int64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,35 +609,84 @@
     "###OJO CON INJURY\n",
     "\n",
     "raw_df2.replace({'Fatal (Y/N)': {'Y': True, 'N': False}})\n",
-    "raw_df2[\"Fatal (Y/N)\"].unique()\n",
+    "raw_df2[\"Fatal (Y/N)\"].value_counts().head()\n",
     "\n",
-    "\n",
-    "replacements = {\n",
-    "   \"Fatal (Y/N)\": {\n",
-    "      r'(D.*DO|DOLLARD.*)': 'N',\n",
-    "      r'I[lL]*[eE]*.*': 'ILLE Perot'}\n",
-    "}\n",
-    "\n",
-    "\n",
-    "df.replace(replacements, regex=True, inplace=True)\n",
+    "#raw_df2.replace()\n",
+    "#[^x]\n",
+    "#df.replace(replacements, regex=True, inplace=True)\n",
     "\n",
     "#raw_df2.dtypes\n",
-    "#df.at['C', 'x'] = 10\n"
+    "#df.at['C', 'x'] = 10\"\"\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "N    4326\n",
+       "Y    1552\n",
+       "Name: Fatal (Y/N), dtype: int64"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import re\n",
+    "\n",
+    "#replace({\"10-Jan\": \"1-10\", \"Nov-50\": \"11-50\"})\n",
+    "\n",
+    "\n",
+    "\n",
+    "#raw_df2['Fatal (Y/N)'].replace(lambda x : if  x != \"Y\" | \"N\", np.nan, inplace=True)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "raw_df2['Fatal (Y/N)'].replace(['UNKNOWN', '#VALUE!'], np.nan, inplace=True)\n",
+    "raw_df2.replace(\"[^N]\", \"N\", inplace=True)\n",
+    "\n",
+    "\n",
+    "\n",
+    "#raw_df2['Fatal (Y/N)'].replace(['F', ' N', \"N \", \"n\"], \"N\", inplace=True)\n",
+    "\n",
+    "\n",
+    "\n",
+    "raw_df2['Fatal (Y/N)'].value_counts()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unprovoked      4386\n",
+       "Provoked         557\n",
+       "Invalid          519\n",
+       "Sea Disaster     220\n",
+       "Boat             200\n",
+       "Boating          110\n",
+       "Name: Type, dtype: int64"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_df2[\"Type\"].value_counts()"
+   ]
   },
   {
    "cell_type": "code",
