Limpiando la dataset

--- a/module-1/pandas-project/your-code/clean-database.ipynb
+++ b/module-1/pandas-project/your-code/clean-database.ipynb
@@ -6263,6 +6263,345 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Case Number                  0\n",
+      "Date                         0\n",
+      "Year                         0\n",
+      "Type                         0\n",
+      "Country                     18\n",
+      "Area                       264\n",
+      "Location                   326\n",
+      "Activity                   327\n",
+      "Name                       115\n",
+      "Sex                        447\n",
+      "Age                          0\n",
+      "Injury                      13\n",
+      "Fatal (Y/N)                  4\n",
+      "Time                      2325\n",
+      "Species                   2165\n",
+      "Investigator or Source      11\n",
+      "pdf                          0\n",
+      "href formula                 1\n",
+      "href                         1\n",
+      "Month                        0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "null_cols = df_cleaning.isnull().sum()\n",
+    "print(null_cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "M      3929\n",
+       "F       497\n",
+       "M         2\n",
+       "lli       1\n",
+       ".         1\n",
+       "N         1\n",
+       "Name: Sex, dtype: int64"
+      ]
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cleaning[\"Sex\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Case Number</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Activity</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Injury</th>\n",
+       "      <th>Fatal (Y/N)</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Species</th>\n",
+       "      <th>Investigator or Source</th>\n",
+       "      <th>pdf</th>\n",
+       "      <th>href formula</th>\n",
+       "      <th>href</th>\n",
+       "      <th>Month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4305</th>\n",
+       "      <td>1934.07.11</td>\n",
+       "      <td>11-Jul-34</td>\n",
+       "      <td>1934</td>\n",
+       "      <td>Boating</td>\n",
+       "      <td>AUSTRALIA</td>\n",
+       "      <td>New South Wales</td>\n",
+       "      <td>Cronulla</td>\n",
+       "      <td>Fishing</td>\n",
+       "      <td>18' boat, occupants William &amp; Leslie Newton</td>\n",
+       "      <td>N</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>No injury to occupants Sharks continually foll...</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Blue pointer, 11'</td>\n",
+       "      <td>G.P. Whitley, ref: Daily Telegraph, 7/11/1934 ...</td>\n",
+       "      <td>1934.07.11-Newton-boat-Australia.pdf</td>\n",
+       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
+       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Case Number       Date  Year     Type    Country             Area  \\\n",
+       "4305  1934.07.11  11-Jul-34  1934  Boating  AUSTRALIA  New South Wales   \n",
+       "\n",
+       "      Location Activity                                         Name Sex Age  \\\n",
+       "4305  Cronulla  Fishing  18' boat, occupants William & Leslie Newton   N  -1   \n",
+       "\n",
+       "                                                 Injury Fatal (Y/N) Time  \\\n",
+       "4305  No injury to occupants Sharks continually foll...           N  NaN   \n",
+       "\n",
+       "                 Species                             Investigator or Source  \\\n",
+       "4305  Blue pointer, 11'   G.P. Whitley, ref: Daily Telegraph, 7/11/1934 ...   \n",
+       "\n",
+       "                                       pdf  \\\n",
+       "4305  1934.07.11-Newton-boat-Australia.pdf   \n",
+       "\n",
+       "                                           href formula  \\\n",
+       "4305  http://sharkattackfile.net/spreadsheets/pdf_di...   \n",
+       "\n",
+       "                                                   href Month  \n",
+       "4305  http://sharkattackfile.net/spreadsheets/pdf_di...     7  "
+      ]
+     },
+     "execution_count": 208,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cleaning[df_cleaning[\"Sex\"]==\"N\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Case Number</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Activity</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Injury</th>\n",
+       "      <th>Fatal (Y/N)</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Species</th>\n",
+       "      <th>Investigator or Source</th>\n",
+       "      <th>pdf</th>\n",
+       "      <th>href formula</th>\n",
+       "      <th>href</th>\n",
+       "      <th>Month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1934.07.11</td>\n",
+       "      <td>11-Jul-34</td>\n",
+       "      <td>1934</td>\n",
+       "      <td>Boating</td>\n",
+       "      <td>AUSTRALIA</td>\n",
+       "      <td>New South Wales</td>\n",
+       "      <td>Cronulla</td>\n",
+       "      <td>Fishing</td>\n",
+       "      <td>18' boat, occupants William &amp; Leslie Newton</td>\n",
+       "      <td>M</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>No injury to occupants Sharks continually foll...</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Blue pointer, 11'</td>\n",
+       "      <td>G.P. Whitley, ref: Daily Telegraph, 7/11/1934 ...</td>\n",
+       "      <td>1934.07.11-Newton-boat-Australia.pdf</td>\n",
+       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
+       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1934.07.11</td>\n",
+       "      <td>11-Jul-34</td>\n",
+       "      <td>1934</td>\n",
+       "      <td>Boating</td>\n",
+       "      <td>AUSTRALIA</td>\n",
+       "      <td>New South Wales</td>\n",
+       "      <td>Cronulla</td>\n",
+       "      <td>Fishing</td>\n",
+       "      <td>18' boat, occupants William &amp; Leslie Newton</td>\n",
+       "      <td>F</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>No injury to occupants Sharks continually foll...</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Blue pointer, 11'</td>\n",
+       "      <td>G.P. Whitley, ref: Daily Telegraph, 7/11/1934 ...</td>\n",
+       "      <td>1934.07.11-Newton-boat-Australia.pdf</td>\n",
+       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
+       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Case Number       Date  Year     Type    Country             Area  Location  \\\n",
+       "0  1934.07.11  11-Jul-34  1934  Boating  AUSTRALIA  New South Wales  Cronulla   \n",
+       "1  1934.07.11  11-Jul-34  1934  Boating  AUSTRALIA  New South Wales  Cronulla   \n",
+       "\n",
+       "  Activity                                         Name Sex Age  \\\n",
+       "0  Fishing  18' boat, occupants William & Leslie Newton   M  -1   \n",
+       "1  Fishing  18' boat, occupants William & Leslie Newton   F  -1   \n",
+       "\n",
+       "                                              Injury Fatal (Y/N) Time  \\\n",
+       "0  No injury to occupants Sharks continually foll...           N  NaN   \n",
+       "1  No injury to occupants Sharks continually foll...           N  NaN   \n",
+       "\n",
+       "              Species                             Investigator or Source  \\\n",
+       "0  Blue pointer, 11'   G.P. Whitley, ref: Daily Telegraph, 7/11/1934 ...   \n",
+       "1  Blue pointer, 11'   G.P. Whitley, ref: Daily Telegraph, 7/11/1934 ...   \n",
+       "\n",
+       "                                    pdf  \\\n",
+       "0  1934.07.11-Newton-boat-Australia.pdf   \n",
+       "1  1934.07.11-Newton-boat-Australia.pdf   \n",
+       "\n",
+       "                                        href formula  \\\n",
+       "0  http://sharkattackfile.net/spreadsheets/pdf_di...   \n",
+       "1  http://sharkattackfile.net/spreadsheets/pdf_di...   \n",
+       "\n",
+       "                                                href Month  \n",
+       "0  http://sharkattackfile.net/spreadsheets/pdf_di...     7  \n",
+       "1  http://sharkattackfile.net/spreadsheets/pdf_di...     7  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df_sex = pd.DataFrame(columns=df_cleaning.columns)\n",
+    "\n",
+    "df_sex = pd.concat([df_sex, df_cleaning[df_cleaning[\"Sex\"]==\"N\"]], ignore_index = True)\n",
+    "df_sex = pd.concat([df_sex, df_cleaning[df_cleaning[\"Sex\"]==\"N\"]], ignore_index = True)\n",
+    "\n",
+    "df_sex[\"Sex\"][0] = \"M\"\n",
+    "df_sex[\"Sex\"][1] = \"F\"\n",
+    "display(df_sex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4877, 20)\n",
+      "(4877, 20)\n",
+      "(4879, 20)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_cleaning.shape)\n",
+    "df_cleaning = df_cleaning[df_cleaning[\"Sex\"]!=\"N\"]\n",
+    "print(df_cleaning.shape)\n",
+    "#df_cleaning = pd.concat([df_cleaning, df_sex], ignore_index = True)\n",
+    "print(df_cleaning.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
