--- a/module-1/pandas-project/your-code/clean-database.ipynb
+++ b/module-1/pandas-project/your-code/clean-database.ipynb
@@ -5949,7 +5949,7 @@
     "        df_ages = pd.concat([df_ages, z[z[\"Age\"]==e]], ignore_index = True)\n",
     "        df_ages[\"Age\"][df_ages.index.max()] = q\n",
     "\n",
-    "display (df_ages)"
+    "display(df_ages)"
    ]
   },
   {
@@ -6874,40 +6874,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Surfing                                                                                                                                         1238\n",
+       "Fishing                                                                                                                                          788\n",
+       "Swimming                                                                                                                                         751\n",
+       "Diving                                                                                                                                           303\n",
+       "Unknown                                                                                                                                          271\n",
+       "Walking                                                                                                                                          233\n",
+       "Boat                                                                                                                                             133\n",
+       "Snorkeling                                                                                                                                        74\n",
+       "Fishing sharks                                                                                                                                    60\n",
+       "Sea disaster                                                                                                                                       6\n",
+       "Lifesaving drill                                                                                                                                   4\n",
+       "Spearfishing                                                                                                                                       4\n",
+       "Tagging sharks                                                                                                                                     3\n",
+       "Shark watching                                                                                                                                     3\n",
+       "Their 9 m launch was run down by a 25,000-ton Japanese freighter  on the night of 3-11-1977 & they drifted, clinging to an icebox for 2 days       3\n",
+       "Escaping from Alacatraz                                                                                                                            3\n",
+       "Feeding fish                                                                                                                                       3\n",
+       "The Christie V sank on 11/6/1988, survivors were adrift on a dinghy                                                                                2\n",
+       "Sitting in the water                                                                                                                               2\n",
+       "Kiteboarding                                                                                                                                       2\n",
+       "\"Flying Tiger\" transport plane went down with 5 men onboard                                                                                        2\n",
+       "                                                                                                                                                   2\n",
+       "Murder                                                                                                                                             2\n",
+       "Sailing                                                                                                                                            2\n",
+       "Teasing a shark                                                                                                                                    2\n",
+       "Finning the shark that bit him                                                                                                                     2\n",
+       "Sitting in shallows                                                                                                                                2\n",
+       "Kite boarding                                                                                                                                      2\n",
+       "Jet skiing                                                                                                                                         2\n",
+       "Attempting to kill a shark with explosives                                                                                                         2\n",
+       "                                                                                                                                                ... \n",
+       "Collecting dynamited fish                                                                                                                          1\n",
+       "Captured Allied soldiers were squeezed into 3' bamboo pig baskets & fed to waiting sharks                                                          1\n",
+       "Crouching in 2' of water                                                                                                                           1\n",
+       "Steinhart Aquarium                                                                                                                                 1\n",
+       "Killing  sharks                                                                                                                                    1\n",
+       "Washing his feet                                                                                                                                   1\n",
+       "Collecting fish from net                                                                                                                           1\n",
+       "Hauling dead shark aboard, when another shark leapt out of the water & bit him                                                                     1\n",
+       "Pacific Seafarer of US Navy                                                                                                                        1\n",
+       "Helping men land a shark                                                                                                                           1\n",
+       "Watching seals                                                                                                                                     1\n",
+       "A 210-ton brig was sunk by a Japanese submarine. Some of the survivors were machine-gunned & some were taken by sharks                             1\n",
+       "Measuring sharks                                                                                                                                   1\n",
+       "SS Ethel Skakel foundered in Central America Hurricane of 1941                                                                                     1\n",
+       "Hunting lobsters in 2.4 m of water                                                                                                                 1\n",
+       "Filming 5' blue shark                                                                                                                              1\n",
+       "16' catamaran capsized previous night, occupants stayed with wreckage until morning, then attempted to swim ashore                                 1\n",
+       "Resting on body board                                                                                                                              1\n",
+       "Crossing the bay at the ford                                                                                                                       1\n",
+       "Removing hook from shark                                                                                                                           1\n",
+       "Setting crayfish pots                                                                                                                              1\n",
+       "Thrashing the water / imitating the shark victim from \"Jaws\"                                                                                       1\n",
+       "Overturned skiff                                                                                                                                   1\n",
+       "In waist-deep water                                                                                                                                1\n",
+       "Removing shark from tank in nightclub                                                                                                              1\n",
+       "Filming underwater, carrying powerhead                                                                                                             1\n",
+       "Adrift after wave swamped engine                                                                                                                   1\n",
+       "Went to aid of child being menaced by the shark                                                                                                    1\n",
+       "Hospital Ship Centaur torpedoed & sunk by the Japanese submarine I-177                                                                             1\n",
+       "Paddling in knee-deep water                                                                                                                        1\n",
+       "Name: Activity, Length: 288, dtype: int64"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "\n",
     "def cleanactivity(act):\n",
-    "    if \"Surf\" in act or \"Body\" in act or \"Boogie\" in act or \"surf\" in act:\n",
+    "    if \"Surf\" in act or \"Body\" in act or \"Boogie\" in act or \"surf\" in act or \"Paddleskiing\" in act\\\n",
+    "    or \"Riding\" in act or \"Paddle\" in act:\n",
     "        return \"Surfing\"\n",
-    "    elif \"Swimming\" in act or \"Floating\" in act or \"Tread\" in act or \"Bath\" in act or \"bath\" in act:\n",
+    "    elif \"Swimming\" in act or \"swimming\" in act or \"Floating\" in act or \"Tread\" in act or \"Bath\" in act\\\n",
+    "    or \"bath\" in act or \"Splash\" in act or \"Jump\" in act or \"Playing\" in act:\n",
     "        return \"Swimming\"\n",
-    "    elif (\"Fishing\" in act or \"fishing\" in act) and (\"shark\" in act or \"Shark\" in act):\n",
+    "    elif ((\"Fishing\" in act or \"fishing\" in act) and (\"shark\" in act or \"Shark\" in act)) or (\"shark\" in act and \"net\" in act):\n",
     "        return \"Fishing sharks\"\n",
-    "    elif \"Fishing\" in act:\n",
+    "    elif \"Fishing\" in act or \"fishing\" in act or \"Shrimping\" in act:\n",
     "        return \"Fishing\"\n",
-    "    elif \"Walk\" in act or \"walk\" in act or \"Stand\" in act:\n",
+    "    elif \"Walk\" in act or \"walk\" in act or \"Stand\" in act or \"Wading\" in act:\n",
     "        return \"Walking\"\n",
     "    elif \"Diving\" in act or \"Dive\" in act or \"diving\" in act or \"dive\" in act:\n",
     "        return \"Diving\"\n",
-    "    elif \"Jun\" in m or \"jun\" in m:\n",
-    "        return 6\n",
-    "    elif \"Jul\" in m or \"jul\" in m:\n",
-    "        return 7\n",
-    "    elif \"Aug\" in m or \"aug\" in m:\n",
-    "        return 8\n",
-    "    elif \"Sep\" in m or \"sep\" in m:\n",
-    "        return 9\n",
-    "    elif \"Oct\" in m or \"oct\" in m:\n",
-    "        return 10\n",
-    "    elif \"Nov\" in m or \"nov\" in m:\n",
-    "        return 11\n",
-    "    elif \"Dic\" in m or \"dic\" in m:\n",
-    "        return 12\n",
+    "    elif \"Canoeing\" in act or \"Kayak\" in act or \"Boating\" in act or \"boat\" in act or \"Rowing\" in act \\\n",
+    "    or \"rowing\" in act or \"overboard\" in act or \"Sea Disaster\" in act or \"Shipwreck\" in act or \"ship\" in act:\n",
+    "        return \"Boat\"\n",
+    "    elif \"Spearfishing\" in act or \"Spearing\" in act:\n",
+    "        return \"Spearfishing\"\n",
     "    else:\n",
-    "        return 0"
+    "        return act\n",
+    "    \n",
+    "wdf = df_cleaning.copy()\n",
+    "wdf['Activity'].fillna(\"Unknown\",inplace=True)\n",
+    "wdf[\"Activity\"].apply(str)\n",
+    "wdf[\"Activity\"].apply(cleanactivity).value_counts()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4878, 23)\n",
+      "(4175, 23)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_cleaning.shape)\n",
+    "df_cleaning = df_cleaning[df_cleaning[\"Year\"]>1940]\n",
+    "print(df_cleaning.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
