--- a/module-1/pandas-project/your-code/data-wrangling.ipynb
+++ b/module-1/pandas-project/your-code/data-wrangling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -1727,7 +1727,7 @@
        "[50 rows x 24 columns]"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1735,13 +1735,14 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import re\n",
     "sharks= pd.read_csv(\"../GSAF5.csv\", engine= \"python\")\n",
     "sharks.head(50)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -1774,7 +1775,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1790,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1800,7 +1801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -3969,7 +3970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3981,7 +3982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -4051,7 +4052,7 @@
        "Name: Species, Length: 2116, dtype: object"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4063,7 +4064,7 @@
     "#Relation between types attacks and shark species\n",
     "sharks['Type'].loc[(sharks['Fatal']=='Y')]\n",
     "\n",
-    "#Most deadly attacks by country\n",
+    "#Most deadly attacks by country, species and species in countries\n",
     "sharks['Country'].loc[(sharks['Fatal']=='Y')]\n",
     "sharks['Species'].loc[(sharks['Fatal']=='Y')]\n",
     "sharks['Species'].loc[(sharks['Country']=='USA')]\n",
@@ -4073,7 +4074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -5251,20 +5252,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(5992, 10)"
+       "White shark                                                       161\n",
+       "Shark involvement not confirmed                                    80\n",
+       "Tiger shark                                                        68\n",
+       "Bull shark                                                         52\n",
+       "6' shark                                                           40\n",
+       "4' shark                                                           39\n",
+       "1.8 m [6'] shark                                                   35\n",
+       "1.5 m [5'] shark                                                   32\n",
+       "1.2 m [4'] shark                                                   27\n",
+       "5' shark                                                           25\n",
+       "3' shark                                                           25\n",
+       "4' to 5' shark                                                     23\n",
+       "2 m shark                                                          22\n",
+       "3 m [10'] shark                                                    22\n",
+       "No shark involvement                                               21\n",
+       "Wobbegong shark                                                    20\n",
+       "3' to 4' shark                                                     18\n",
+       "3 m shark                                                          16\n",
+       "2.4 m [8'] shark                                                   16\n",
+       "3.7 m [12'] shark                                                  15\n",
+       "Blue shark                                                         14\n",
+       "12' shark                                                          14\n",
+       "Mako shark                                                         14\n",
+       "Blacktip shark                                                     14\n",
+       "1.2 m to 1.5 m [4' to 5'] shark                                    14\n",
+       "7' shark                                                           14\n",
+       "1.5 m shark                                                        13\n",
+       "\"a small shark\"                                                    13\n",
+       "5 m [16.5'] white shark                                            13\n",
+       "10' shark                                                          13\n",
+       "                                                                 ... \n",
+       "Tiger shark, 10?                                                    1\n",
+       "234-lb shark                                                        1\n",
+       "1.3 m [4'3\"] shark                                                  1\n",
+       "Mako shark, 100-lb                                                  1\n",
+       "sand shark                                                          1\n",
+       "His hand was found in a 2.4 m [8'] tiger shark caught 1/5/1949      1\n",
+       "Porbeagle shark                                                     1\n",
+       "7' to 8' bull shark                                                 1\n",
+       "small hammerhead shark                                              1\n",
+       "Lemon shark, 6' female                                              1\n",
+       "30-kg [66-lb] shark                                                 1\n",
+       "Nurse shark, 3', 20-lb                                              1\n",
+       "Raggedtooth shark, 2 m                                              1\n",
+       "\"a young shark\"                                                     1\n",
+       "3' \"blue nosed\" shark                                               1\n",
+       "0.9 m  [3'] shark                                                   1\n",
+       "White shark, 4 to 5 m                                               1\n",
+       "Miami, a 60 cm blacktip  shark and two 60 cm bamboo catsharks       1\n",
+       "Bronze whaler shark, 2 m                                            1\n",
+       "Raggedtooth shark, 3.5 m [11.5']                                    1\n",
+       "Tiger shark, 3 m to 4 m [10' to 13']                                1\n",
+       "Dusky shark, 12'                                                    1\n",
+       "1.8 m [6'] carpet shark                                             1\n",
+       "Tiger shark, 13'                                                    1\n",
+       "3.7 m to 4.6 m [12' to 15'] shark                                   1\n",
+       "Bull shark, 2.3 m [7.5']                                            1\n",
+       "Blue or porbeagle shark                                             1\n",
+       "Bronze whaler shark, 1.8 m [6']                                     1\n",
+       "2.4 m [8'], 600-lb shark                                            1\n",
+       "1.2 m to 1.5 m [4' to 5']   shark                                   1\n",
+       "Name: Species, Length: 1538, dtype: int64"
       ]
      },
-     "execution_count": 171,
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#sharks['Species'].loc[(sharks['Fatal']=='Y')].value_counts()\n",
+    "display(sharks['Species'].value_counts())\n",
+    "#sharks['Country'].loc[(sharks['Species']=='White shark')].value_counts()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Clean FATAL Column\n",
+    "new_sharks['Fatal'].fillna('UNKNOWN', inplace= True)\n",
+    "#x.isnull().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 287,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "White Shark          646\n",
+       "Tiger Shark          281\n",
+       "Bull Shark           199\n",
+       "Blacktip Shark        99\n",
+       "Nurse Shark           92\n",
+       "Bronze Shark          65\n",
+       "Mako Shark            56\n",
+       "Hammerhead Shark      48\n",
+       "Raggedtooth Shark     44\n",
+       "Lemon Shark           31\n",
+       "Sand Shark            27\n",
+       "Dusky Shark           16\n",
+       "Porbeagle Shark        8\n",
+       "Name: Species, dtype: int64"
+      ]
+     },
+     "execution_count": 287,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "# Clean SPECIES Column\n",
+    "\n",
+    "\n",
+    "def cleanspecies (shark):\n",
+    "    shark = str(shark).lower()\n",
+    "    if 'white' in shark:\n",
+    "        return 'White Shark'\n",
+    "    elif 'bronze' in shark:\n",
+    "        return 'Bronze Shark'\n",
+    "    elif 'tiger' in shark:\n",
+    "        return 'Tiger Shark'\n",
+    "    elif 'zambesi' in shark or 'bull' in shark:\n",
+    "        return 'Bull Shark'\n",
+    "    elif 'dusky' in shark:\n",
+    "        return 'Dusky Shark'\n",
+    "    elif 'ragged' in shark:\n",
+    "        return 'Raggedtooth Shark'\n",
+    "    elif 'mako' in shark:\n",
+    "        return 'Mako Shark'\n",
+    "    elif 'lemon' in shark:\n",
+    "        return 'Lemon Shark'\n",
+    "    elif 'wobeg' in shark:\n",
+    "        return 'Wobegong Shark'\n",
+    "    elif 'hammer' in shark or 'liver' in shark:\n",
+    "        return 'Hammerhead Shark'\n",
+    "    elif 'nurse' in shark:\n",
+    "        return 'Nurse Shark'\n",
+    "    elif 'sand' in shark:\n",
+    "        return 'Sand Shark'\n",
+    "    elif 'blackt' in shark or 'sandbar' in shark:\n",
+    "        return 'Blacktip Shark'\n",
+    "    elif 'porbeag' in shark:\n",
+    "        return 'Porbeagle Shark'\n",
+    "    \n",
+    "new_sharks['Species'] = new_sharks['Species'].apply(cleanspecies)\n",
+    "       \n",
+    "new_sharks['Species'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
